@@ -1,5 +1,7 @@
 package io.openaev.xtmone;
 
+import io.openaev.utils.StringUtils;
+import jakarta.annotation.PostConstruct;
 import lombok.Data;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
@@ -21,14 +23,22 @@ public class XtmOneConfig {
   private volatile String platformUrl;
   private volatile String platformVersion;
 
-  public String getEffectiveWebToken() {
-    if (webToken != null && !webToken.isBlank()) {
-      return webToken;
+  /** Strips trailing slash from the URL so callers can safely append paths. */
+  @PostConstruct
+  void normalizeUrl() {
+    while (url != null && url.endsWith("/")) {
+      url = url.substring(0, url.length() - 1);
     }
-    return discoveredWebToken;
+  }
+
+  public String getEffectiveWebToken() {
+    if (!StringUtils.isBlank(getWebToken())) {
+      return getWebToken();
+    }
+    return getDiscoveredWebToken();
   }
 
   public boolean isConfigured() {
-    return url != null && !url.isBlank() && token != null && !token.isBlank();
+    return !StringUtils.isBlank(getUrl()) && !StringUtils.isBlank(getToken());
   }
 }
